<resources>

    <string name="title_activity_webview" translatable="false">WebviewActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="please_fill_in_the_waqf_information_accurately_and_carefully">Please fill in the waqf information accurately and attentively.</string>
    <string name="cairoUniversity">Cairo University</string>
    <string name="app_name">DAWAM</string>
    <string name="search">search</string>
    <string name="dawam_info">هو وسيلة لحفظ الأوقاف الموثقة بشكل غير قابل للتغير أو التلف عبر مر العصور بصورة لامركزية باستخدام تقنية البلوكتشين.</string>

    <string name="dawam">دوام</string>
    <string name="awqaf">الأوقاف</string>
    <string name="followUsForMoreInformation">Follow us to get more information</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="about_us_text1">عبر العهود الإسلامية أنشأت أوقاف خلدها التاريخ حققت مقاصدها عبر العصوروما خطه الرحالة وكاتبي السير أرشدنا إلى روائع لم تكن بالحسبان ففي أوج حضارتنا خصص وقف لكل حاجة ومطلب وكان لنا وراء كل وقف قصة يدلنا عليها الواقف والدافع والجهة الموقوف عليها والوقف ووثيقة الوقف وغيره</string>
    <string name="about_us_text3">وهنا يأتي دور دوام لحماية هذه الحجج (الوثائق) حتى لا تؤول مآل اخواتها المفقودة جراء تغيير الظروف حيث يتم في دوام تخليد الأوقاف و حفظها للأبد على شبكة Ethereum القائمة على تقنية ال Blockchain و ذلك من خلال استخدام العقود الذكية و الرموز غير القابلة للاستبدال (NFTs) لتشفير الحجج الوقفية وبالتالي ضمان حماية الأوقاف من التغيير أو التلف أو الفقد.</string>
    <string name="about_us_text2" translatable="false"> </string>
    <string name="waqf_name">Waqf name</string>
    <string name="name_of_the_owner_of_the_waqf">Founder name</string>
    <string name="waqf_date">Date</string>
    <string name="waqf_type">نوع الوقف</string>
    <string name="waqf_description">Waqf description</string>
    <string name="the_good_return_from_the_waqf">Revenue of the waqf</string>
    <string name="apply">Apply</string>
    <string name="contact_us">Contact us</string>
    <string name="about_us">About us</string>
    <string name="home">Home</string>
    <string name="previous">previous</string>
    <string name="next">next</string>
    <string name="quran">quran</string>
    <string name="person_name">اسم الواقف</string>
    <string name="read_more">Read more</string>
    <string name="viewing_the_legal_document">View the legal document</string>
    <string name="request_to_add_waqf">send waqf request</string>
    <string name="about_us_title_page">Who are we and what do we do?</string>
    <string name="contact_us_title_page">Get in touch with our team</string>
    <string name="waqf_date_H">Islamic Date</string>
    <string name="choose_city">Select the city</string>
    <string name="waqfActivity">"Waqf activity: "</string>
    <string name="choose_waqf_country">Select the country</string>
    <string name="choose_waqf_activity">Choose the Waqf activity</string>
    <string name="choose_waqf_type">Choose the type of Waqf</string>
    <string name="add">Add</string>
    <string name="try_again">Try again</string>
    <string name="waqfNameInHome" translatable="false">اسم الوقف</string>
    <string name="request_for_new_waqf">Request for new waqf</string>
</resources>