<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="vm"
            type="com.example.dawam.ui.apply_waqf.ApplayWaqfRequestViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="12dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/fragment_apply_waqf_request">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/top_guid_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".01" />

        <TextView
            android:id="@+id/note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/top_guid_line"
            app:layout_constraintBottom_toTopOf="@id/linear"
            android:fontFamily="@font/cairo_semi_bold"
            android:textSize="16sp"
            android:textColor="@color/green"
            android:text="@string/please_fill_in_the_waqf_information_accurately_and_carefully" />


        <LinearLayout
            android:id="@+id/linear"
            app:layout_constraintTop_toBottomOf="@id/note"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/user_name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:boxBackgroundColor="@color/transparent">

                <EditText
                    android:id="@+id/user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/waqf_name"
                    android:text="@={vm.waqfName}"
                    error="@{vm.waqfNameError}"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:boxBackgroundColor="@color/transparent">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name_of_the_owner_of_the_waqf"
                    android:text="@={vm.waqefName}"
                    error="@{vm.waqefNameError}"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:boxBackgroundColor="@color/transparent">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/waqf_date"
                    android:text="@={vm.dateOfWaqf}"
                    error="@{vm.dateOfWaqfError}"
                    android:inputType="date" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:boxBackgroundColor="@color/transparent">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/waqf_description"
                    android:text="@={vm.waqfDiscreption}"
                    error="@{vm.waqfDiscreptionError}"
                    android:inputType="textMultiLine" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:boxBackgroundColor="@color/transparent">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/the_good_return_from_the_waqf"
                    android:text="@={vm.goodReturnFromTheWaqf}"
                    error="@{vm.goodReturnFromTheWaqfError}"
                    android:inputType="textMultiLine" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirm_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:boxBackgroundColor="@color/transparent">

                <EditText
                    android:id="@+id/confirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/waqf_type"
                    android:text="@={vm.waqfType}"
                    error="@{vm.waqfTypeError}"
                    android:inputType="textMultiLine" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/btn_rounded_green"
                android:paddingHorizontal="32dp"
                android:paddingVertical="8dp"
                android:text="@string/request_to_add_waqf"
                android:textColor="@color/white"
                android:layout_marginTop="32dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:onClick="@{()->vm.register()}"
                app:layout_constraintBottom_toBottomOf="parent" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>