<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            app:elevation="0dp">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_scrollFlags="scroll">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/materialCardView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:elevation="8dp"
                        app:cardCornerRadius="12dp"
                        app:cardUseCompatPadding="true"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintWidth_percent="0.8"
                        app:layout_constraintTop_toTopOf="parent"
                        app:strokeColor="@color/gray"
                        app:strokeWidth="2dp">

                        <androidx.appcompat.widget.SearchView
                            android:id="@+id/searchBar"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layoutDirection="rtl"
                            app:iconifiedByDefault="false"
                            app:queryBackground="@color/transparent"
                            app:searchIcon="@drawable/ic_search"
                            app:closeIcon="@drawable/ic_close"
                            app:queryHint="@string/search" />
                    </com.google.android.material.card.MaterialCardView>

                    <ImageView
                        android:id="@+id/logo"
                        android:layout_width="65dp"
                        android:layout_height="45dp"
                        app:layout_constraintBottom_toBottomOf="@+id/materialCardView"
                        app:layout_constraintStart_toEndOf="@id/materialCardView"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:scaleType="fitCenter"
                        app:layout_constraintTop_toTopOf="@id/materialCardView"
                        android:src="@drawable/ic_dawam" />

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dawam"
                        android:textSize="20sp"
                        android:textColor="@color/gold"
                        android:fontFamily="@font/cairo_semi_bold"
                        app:layout_constraintEnd_toEndOf="@id/info"
                        app:layout_constraintTop_toBottomOf="@id/materialCardView"
                        android:layout_margin="16dp" />

                    <TextView
                        android:id="@+id/info"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dawam_info"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/cairo"
                        app:layout_constraintTop_toBottomOf="@id/title"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginTop="8dp" />

                    <View
                        android:id="@+id/line"
                        android:layout_width="match_parent"
                        android:layout_height="1.5dp"
                        app:layout_constraintTop_toBottomOf="@id/info"
                        android:layout_marginVertical="16dp"
                        android:background="@color/gray" />
                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <include
            layout="@layout/content_home_fragment"
            android:id="@+id/content" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>